--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 
+
 body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    background-color: #003F88;
 }
 header{
     display: flex;
@@ -49,71 +51,40 @@ nav .active, nav a:hover{
 }
 
 #banner{
-    background-image: url(../images/sd.PNG);
+    background-image: url(./images/informatica.jpg);
     height: 700px;
     background-size: cover;
     background-position: center;
-
-    justify-content: center;
-}
-
-.banner_options{
-    height: 210px;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0px 0px 42px -6px rgba(0,0,0,0.59);
 }
 
-.banner1,.banner2,.banner3{
-    color: white;
-    background-color: #003F88;
-    border: black solid 2px;
-    box-shadow: 0px 0px 18px 5px rgba(0,0,0,0.31);
-    margin-top: 70px;
-    margin-left: 20px;
-    width: 400px;
-    height: 300px;
+.titulo1 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 50px;
+    margin: 200px;
+    color: #FDC500;
+    text-shadow: #474747 3px 5px 2px, -5px 2px 13px rgba(0,0,0,0.51);
 }
 
-.banner1{
-    text-align: center;
-    padding-top: 10px;
-    text-shadow: 2px 2px 12px #000000;
+.titulo2{
+    font-family: 'Roboto', sans-serif;
+    font-size: 25px;
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    color: #FDC500;
+    text-shadow: 3px 2px 3px rgba(255,255,255,.2), 2px 2px 16px rgba(0,0,0,0.36);
 }
 
-.banner2{
-    text-align: center;
-    padding-top: 10px;
-    text-shadow: 2px 2px 12px #000000;
-}
-
-.banner3{
-    text-align: center;
-    padding-top: 10px;
-    text-shadow: 2px 2px 12px #000000;
-}
-.banner_title{
-    font-size: 20px;
-}
-
-.banner_desc{
-    padding-top: 10px;
-    font-size: 12px;
-    margin: 10px;
-}
-
-.banner_options a{
+.desc {
+    font-family: 'Roboto', sans-serif;
     font-size: 15px;
-    margin-top: 40px;
-    text-decoration: none;
-    color: #FFD500;
+    display: flex;
+    justify-content: center;
+    color: rgb(228, 240, 164);
+    text-shadow: 3px 2px 3px rgba(255,255,255,.2), 2px 2px 16px rgba(0,0,0,0.36);
 }
 
-.banner_options a:hover{
-    background-color: #FFD500;
-    color: #003F88;
-    border-radius: 3px;
-}
-
-
-
-
+#form {}
